--- a/test/kitchen/.kitchen-azure.yml
+++ b/test/kitchen/.kitchen-azure.yml
@@ -14,6 +14,64 @@
   end
 %>
 
+provisioner:
+  name: chef_solo
+  require_chef_omnibus: true
+  product_version: 13.6.4
+  require_chef_omnibus: 13.6.4
+
+<% if ENV['KITCHEN_DRIVER'] && ENV['KITCHEN_DRIVER'] == "hyperv" %>
+driver:
+  name: hyperv
+  vm_switch: <%= ENV['KITCHEN_HYPERV_SWITCH'] %>
+  <% if ENV['KITCHEN_HYPERV_MEM'] %>
+  memory_startup_bytes: <%= ENV['KITCHEN_HYPERV_MEM'] %>
+  <% else %>
+  memory_startup_bytes: 8192
+  <% end %>
+
+platforms:
+<%
+    # TEST_PLATFORMS syntax is `short_name1,parent vhd folder,parent_vhd_name|...`
+    hv_test_platforms = ENV['TEST_PLATFORMS'].split('|').map { |p| p.split(',') }
+    chef_versions = %w(
+      13.6.4
+    )
+    exclude_platforms = []
+    windows_platforms = []
+
+    hv_test_platforms.product(chef_versions).each do |platform, chef_version|
+
+    platform_name = platform[0] + "-azure"
+    windows = platform_name.include?("win")
+    if windows
+      windows_platforms << platform_name
+    end
+%>
+-name: <%= platform_name %>
+ transport:
+    <% if windows %>
+    name: winrm
+    <% else %>
+    ssh_key: <%= ENV['AZURE_SSH_KEY_PATH'] %>
+    <% end %>
+  driver:
+    name: hyperv
+    parent_vhd_folder: <%= platform[1] %>
+    parent_vhd_name: <%= platform[2] %>
+  transport:
+    <% if windows %>
+    name: winrm
+    elevated: true
+    username: <%= ENV['VM_USERNAME'] %>
+    password: <%= ENV['SERVER_PASSWORD'] %>
+    <% else %>
+    ssh_key: <%= ENV['AZURE_SSH_KEY_PATH'] %>
+    <% end %>
+
+
+<% else %>
+
 driver:
   name: azurerm
 
@@ -26,11 +84,6 @@ driver_config:
   azure_resource_group_suffix: plnone
   <% end %>
 
-provisioner:
-  name: chef_solo
-  require_chef_omnibus: true
-  product_version: 13.6.4
-  require_chef_omnibus: 13.6.4
 
 platforms:
 # Loop through two lists and output a total matrix of all possible platform + chef versions,
@@ -110,7 +163,7 @@ platforms:
     <% end %>
 
 <% end %>
-
+<% end %>
 suites:
 
 <%
